--- a/01-sample.yaml
+++ b/01-sample.yaml
@@ -1,18 +1,20 @@
-- name: Install Nginx
-  hosts: web
+- name: INstall Nginx
+  hosts: WEB
   become: true
-  tasks: 
-    - name: Install Nginx
+  tasks:
+    - name: Installl nginx
       ansible.builtin.yum:
         name: httpd
         state: latest
+
     - name: Start Nginx
       ansible.builtin.systemd:
         name: nginx
         state: started
         enabled: yes
+
 - name: Install Nginx
-  hosts: web
+  hosts: WEB
   become: true
   roles:
     - sample
