--- a/04-vars.yml
+++ b/04-vars.yml
@@ -1,7 +1,7 @@
 - name: Variable Precedence
   hosts: localhost
   connection: local
-  vars:
-    URL: play.google.com
-    roles:
-      - sample
+  #  vars:
+  #    URL: play.google.com
+  roles:
+    - sample
