--- a/01-sample.yaml
+++ b/01-sample.yaml
@@ -13,8 +13,8 @@
         state: started
         enabled: yes
 
-- name: Install Nginx
-  hosts: WEB
-  become: true
-  roles:
-    - sample
+#- name: Install Nginx
+#  hosts: WEB
+#  become: true
+#  roles:
+#    - sample
