--- a/01-sample.yaml
+++ b/01-sample.yaml
@@ -8,7 +8,7 @@
         state: latest
 
     - name: Start Nginx
-      ansible.builtin.systemd:
+      ansible.builtin.systemd_service:
         name: nginx
         state: started
         enabled: yes
