--- a/01-sample.yaml
+++ b/01-sample.yaml
@@ -2,18 +2,18 @@
   hosts: WEB
   become: true
   tasks:
-    - name: Install nginx
+    - name: Installl nginx
       ansible.builtin.yum:
         name: httpd
         state: latest
 
     - name: Start Nginx
-      ansible.builtin.systemd_service:
+      ansible.builtin.systemd:
         name: nginx
         state: started
         enabled: yes
 
-- name: Install Nginx
+- name: INstall Nginx
   hosts: WEB
   become: true
   roles:
