--- a/roles/sample/tasks/main.yml
+++ b/roles/sample/tasks/main.yml
@@ -1,4 +1,4 @@
-- name: Installl nginx
+- name: Install nginx
   ansible.builtin.yum:
     name: httpd
     state: latest
@@ -8,12 +8,12 @@
     state: started
     enabled: yes
 
-- name: Print variable
-  ansible.builtin.debug:
-    msg: URL = {{ URL }}
+#- name: Print variable
+#  ansible.builtin.debug:
+#    msg: URL = {{ URL }}
 
-- name: Print variable - task variable defined
-  ansible.builtin.debug:
-    msg: URL = {{ URL }}
-  vars:
-    URL: tasks.google.com
+#- name: Print variable - task variable defined
+#  ansible.builtin.debug:
+#    msg: URL = {{ URL }}
+#  vars:
+#    URL: tasks.google.com
