--- a/roles/sample/tasks/main.yml
+++ b/roles/sample/tasks/main.yml
@@ -1,12 +1,12 @@
-- name: Install nginx
-  ansible.builtin.yum:
-    name: httpd
-    state: latest
-- name: Start Nginx
-  ansible.builtin.systemd:
-    name: nginx
-    state: started
-    enabled: yes
+#- name: Install nginx
+#  ansible.builtin.yum:
+#    name: httpd
+#    state: latest
+#- name: Start Nginx
+#  ansible.builtin.systemd:
+#    name: nginx
+#    state: started
+#    enabled: yes
 
 #- name: Print variable
 #  ansible.builtin.debug:
