--- a/01-sample.yml
+++ b/01-sample.yml
@@ -9,5 +9,5 @@
     - name: Start Nginx
       ansible.builtin.systemd:
         name: nginx
-        state: started
+        state: restarted
         enabled: yes
