--- a/01-sample.yml
+++ b/01-sample.yml
@@ -1,13 +1,20 @@
-- name: Install Nginx
-  hosts: all
+- name: INstall Nginx
+  hosts: WEB
   become: true
   tasks:
-    - name: Install nginx
+    - name: Installl nginx
       ansible.builtin.yum:
         name: httpd
         state: latest
+
     - name: Start Nginx
-      ansible.builtin.systemd_service:
+      ansible.builtin.systemd:
         name: nginx
-        state: restarted
+        state: started
         enabled: yes
+
+- name: Install Nginx
+  hosts: WEB
+  become: true
+  roles:
+    - sample
