--- a/01-sample.yml
+++ b/01-sample.yml
@@ -1,8 +1,8 @@
-- name: INstall Nginx
+- name: Install Nginx
   hosts: WEB
   become: true
   tasks:
-    - name: Installl nginx
+    - name: Install nginx
       ansible.builtin.yum:
         name: httpd
         state: latest
