--- a/roles/sample/tasks/main.yml
+++ b/roles/sample/tasks/main.yml
@@ -1,19 +1,19 @@
-#- name: Install nginx
-#  ansible.builtin.yum:
-#    name: httpd
-#    state: latest
-#- name: Start Nginx
-#  ansible.builtin.systemd:
-#    name: nginx
-#    state: started
-#    enabled: yes
+- name: Install nginx
+  ansible.builtin.yum:
+    name: httpd
+    state: latest
+- name: Start Nginx
+  ansible.builtin.systemd:
+    name: nginx
+    state: started
+    enabled: yes
 
-- name: Print variable
-  ansible.builtin.debug:
-    msg: URL = {{ URL }}
+#- name: Print variable
+#  ansible.builtin.debug:
+#    msg: URL = {{ URL }}
 
-- name: Print variable - task variable defined
-  ansible.builtin.debug:
-    msg: URL = {{ URL }}
-  vars:
-    URL: tasks.google.com
+#- name: Print variable - task variable defined
+#  ansible.builtin.debug:
+#    msg: URL = {{ URL }}
+#  vars:
+#    URL: tasks.google.com
