--- a/01-sample.yml
+++ b/01-sample.yml
@@ -12,9 +12,9 @@
         state: started
         enabled: yes
 
-- name: Install nginx
-  hosts: WEB
-  become: true
-  roles:
-    - sample
+#- name: Install nginx
+#  hosts: WEB
+#  become: true
+#  roles:
+#    - sample
 
