--- a/01-sample.yml
+++ b/01-sample.yml
@@ -7,7 +7,7 @@
         name: httpd
         state: latest
     - name: Start Nginx
-      ansible.builtin.systemd:
+      ansible.builtin.systemd_service:
         name: nginx
         state: started
         enabled: yes
