--- a/01-sample.yml
+++ b/01-sample.yml
@@ -9,7 +9,7 @@
     - name: Start Nginx
       ansible.builtin.systemd_service:
         name: nginx
-        state: started
+        state: restarted
         enabled: yes
 
 #- name: Install nginx
