--- a/01-sample.yml
+++ b/01-sample.yml
@@ -2,7 +2,7 @@
   hosts: all
   become: true
   tasks:
-    - name: Installl nginx
+    - name: Install nginx
       ansible.builtin.yum:
         name: httpd
         state: latest
