--- a/01-sample.yml
+++ b/01-sample.yml
@@ -1,21 +1,15 @@
-- name: INstall Nginx
-  hosts: WEB
+- name: Nginx
+  hosts: localhost
+  connection: local
   become: true
   tasks:
-    - name: Install nginx
+    - name: Install Nginx
       ansible.builtin.yum:
-        name: httpd
-        state: latest
-
-    - name: Start Nginx
+        name: nginx
+        state: installed
+    - name: Restart Nginx
       ansible.builtin.systemd:
         name: nginx
         state: started
-        enabled: yes
-
-- name: Install nginx
-  hosts: WEB
-  become: true
-  roles:
-    - sample
+        enabled: true
 
