--- a/01-sample.yml
+++ b/01-sample.yml
@@ -1,12 +1,5 @@
 - name: Nginx
   hosts: all
   become: true
-  tasks:
-    - name: Install nginx
-      ansible.builtin.yum:
-        name: httpd
-        state: latest
-    - name: Restart Nginx
-      ansible.builtin.systemd_service:
-        name: nginx
-        state: restarted
+  roles:
+    - sample
