--- a/02-vars.yml
+++ b/02-vars.yml
@@ -1,15 +1,9 @@
-- name: Variable
+- name: Demo variable
   hosts: localhost
   connection: local
   vars:
-    URL: play.google.com
+    - URL: play.google.com
   tasks:
-    - name: Print variable
-      ansible.builtin.debug:
-        msg: URL = {{ URL }}
-    ## Ansible access variable with two flower brackets
-    - name: Print task variable
-      ansible.builtin.debug:
-        msg: URL = {{ URL }}
-      vars:
-        URL: tasks.google.com
+    name: Demo on variable
+    ansible.builtin.debug:
+      - Print URL: {{ URL }}
