--- a/04-vars.yml
+++ b/04-vars.yml
@@ -1,7 +1,7 @@
 - name: Demo on variables
   hosts: localhost
   connection: local
-  vars:
-    URL: play.google.com
+#  vars:
+#    URL: play.google.com
   roles:
     - sample
