--- a/05-vars-types.yml
+++ b/05-vars-types.yml
@@ -10,4 +10,4 @@
     - name: Print Business Message
       ansible.builtin.debug:
         msg: "Fruit Name - {{ Fruit_Name }}, Quantity - {{ Quantity }}"
-      for_sale: true
+      when: for_sale
