--- a/06-loops.yml
+++ b/06-loops.yml
@@ -1,26 +1,14 @@
-- name: Demo on Loops
+- name: Demo on loops
   hosts: localhost
   connection: local
   vars:
     fruits:
-      - orange
       - apple
+      - banana
+      - pineapple
+      - sweet potato
   tasks:
-    - name: Print Fruits
+    - name: Print Fruit Names
       ansible.builtin.debug:
-        msg: Fruit Name - "{{ item }}"
-      loop: "{{ fruits }}"
-
-    - name: Print Fruits Local values
-      ansible.builtin.debug:
-        msg: Fruit Name - "{{ item }}"
-      loop:
-        - banana
-        - kiwi
-
-    - name: Print Fruits name Quantity
-      ansible.builtin.debug:
-        msg: Fruit Name - {{ item.name }} ,  Quantity - {{ item.quantity }}
-      loop:
-        - { name: "orange", quantity: 100 }
-        - { name: "apple", quantity: 200 }
+        msg: Fruit Name - {{ item }}
+      loops: {{ fruits }}
