--- a/06-loops.yml
+++ b/06-loops.yml
@@ -25,6 +25,6 @@
       ansible.builtin.debug:
         msg: Fruit Name - {{ item.fruit_name }}, Quantity - {{ item.quantity }}
       loop:
-        - {{ fruit_name: "apple", quantity: 100 }}
-        - {{ fruit_name: "banana", quantity: 200 }}
-        - {{ fruit_name: "tomato", quantity: 250 }}
+        - { fruit_name: "apple", quantity: 100 }
+        - { fruit_name: "banana", quantity: 200 }
+        - { fruit_name: "tomato", quantity: 250 }
