--- a/06-loops.yml
+++ b/06-loops.yml
@@ -53,7 +53,7 @@
         - tomato
     - name: Print Fruit details
       ansible.builtin.debug:
-        msg: "Fruit name is {{ item.Fruit_name }}, Quantity is {{ quantity }}"
+        msg: "Fruit name is {{ item.Fruit_name }}, Quantity is {{ item.quantity }}"
       loop:
         - { Fruit_name: "apple", quantity: 100}
         - { Fruit_name: "orange", quantity: 150 }
