--- a/06-loops.yml
+++ b/06-loops.yml
@@ -41,12 +41,12 @@
   tasks:
     - name: Print Fruit Names
       ansible.builtin.debug:
-        msg: Fruit name is {{ item }}
+        msg: "Fruit name is {{ item }}"
       loop: "{{ fruits }}"
 
     - name: Print Fruit Names - Examples
       ansible.builtin.debug:
-        msg: Fruit message is {{ item }}
+        msg: "Fruit message is {{ item }}"
       loop:
         - potato
         - pineapple
