--- a/06-loops.yml
+++ b/06-loops.yml
@@ -9,7 +9,7 @@
       - Orange
       - Sweet potato
   tasks:
-    - name: Print Fruit Names - 1
+    - name: Print Fruit Names
       ansible.builtin.debug:
         msg: Fruit Name List - {{ list }}
       loop: "{{ fruits }}"
