--- a/06-loops.yml
+++ b/06-loops.yml
@@ -9,7 +9,7 @@
       - Orange
       - Sweet potato
   tasks:
-    - name: Print Fruit Names
+    - name: Print Fruit Name - 1
       ansible.builtin.debug:
         msg: Fruit Name is {{ item }}
       loop: "{{ fruits }}"
@@ -20,4 +20,10 @@
         - tomato
         - potato
         - mouse
+    - name: Print Fruit Name - 3
+      ansible.builtin.debug:
+        msg: Fruit Name is {{ item }}
+      loop:
+        - { Fruit Name: "apple", Quantity: 100 }
+        - { Fruit Name: "tomato", Quantity: 500 }
 
