--- a/06-loops.yml
+++ b/06-loops.yml
@@ -22,8 +22,8 @@
         - mouse
     - name: Print Fruit Name - 3
       ansible.builtin.debug:
-        msg: Fruit Name is {{ item.Fruit Name }}, Quantity is {{ item.Quantity }}
+        msg: Fruit Name is {{ item.Fruit_Name }}, Quantity is {{ item.Quantity }}
       loop:
-        - { Fruit Name: "apple", Quantity: 100 }
-        - { Fruit Name: "tomato", Quantity: 500 }
+        - { Fruit_Name: "apple", Quantity: 100 }
+        - { Fruit_Name: "tomato", Quantity: 500 }
 
