--- a/07-templates.yml
+++ b/07-templates.yml
@@ -1,6 +1,8 @@
 - name: Demo on template
   hosts: localhost
   connection: local
+  vars:
+    name: [ "Akhilesh" ]
   tasks:
     - name: Print My name
       ansible.builtin.template:
